app/parser/Node/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EACH
    MATH_OPER

Grammar

Rule 0     S' -> COMPLETE_IF_THEN
Rule 1     COMPLETE_IF_THEN -> IF_COMPARISON
Rule 2     COMPLETE_IF_THEN -> THEN PRINT_VAL
Rule 3     COMPLETE_IF_THEN -> OTHERWISE COMPARISON
Rule 4     COMPLETE_IF_THEN -> OTHERWISE PRINT_VAL
Rule 5     IF_COMPARISON -> IF COMPARISON
Rule 6     IF_COMPARISON -> IF2 COMPARISON
Rule 7     COMPARISON -> COMPARISON1
Rule 8     COMPARISON -> COMPARISON2
Rule 9     COMPARISON -> COMPARISON301
Rule 10    COMPARISON -> COMPARISON302
Rule 11    COMPARISON -> COMPARISON311
Rule 12    COMPARISON -> COMPARISON312
Rule 13    COMPARISON -> COMPARISON4
Rule 14    COMPARISON -> COMPARISON41
Rule 15    COMPARISON -> COMPARISON5
Rule 16    COMPARISON -> COMPARISON51
Rule 17    COMPARISON -> COMPARISON52
Rule 18    COMPARISON -> COMPARISON6
Rule 19    COMPARISON -> COMPARISON61
Rule 20    COMPARISON -> COMPARISON7
Rule 21    COMPARISON -> COMPARISON711
Rule 22    COMPARISON -> COMPARISON8
Rule 23    COMPARISON -> COMPARISON9
Rule 24    COMPARISON -> COMPARISON91
Rule 25    COMPARISON -> Q_COMPARISON_IS_QUAL
Rule 26    COMPARISON -> Q_COMPARISON_IS_EMPTY
Rule 27    COMPARISON -> Q_COMPARISON_CONTAINS_QUAL
Rule 28    COMPARISON301 -> COMPARISON AND COMPARISON
Rule 29    COMPARISON302 -> COMPARISON OR COMPARISON
Rule 30    COMPARISON311 -> LPAREN COMPARISON AND COMPARISON RPAREN
Rule 31    COMPARISON312 -> LPAREN COMPARISON OR COMPARISON RPAREN
Rule 32    COMPARISON1 -> THERE IS DATA FOR MEASUREMENT
Rule 33    COMPARISON2 -> NO DATA FOR MEASUREMENT
Rule 34    COMPARISON4 -> MEASUREMENT2 COMP NUMUM
Rule 35    COMPARISON4 -> MEASUREMENT2 COMP NUMNM
Rule 36    COMPARISON4 -> MEASUREMENT2 COMP NUM
Rule 37    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
Rule 38    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
Rule 39    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMUM
Rule 40    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
Rule 41    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
Rule 42    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMNM
Rule 43    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUM
Rule 44    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUM
Rule 45    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUM
Rule 46    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
Rule 47    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
Rule 48    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
Rule 49    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
Rule 50    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
Rule 51    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
Rule 52    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
Rule 53    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
Rule 54    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
Rule 55    COMPARISON7 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM
Rule 56    COMPARISON7 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM
Rule 57    COMPARISON7 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM
Rule 58    COMPARISON8 -> VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
Rule 59    COMPARISON8 -> VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
Rule 60    COMPARISON8 -> VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUM
Rule 61    COMPARISON9 -> THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
Rule 62    COMPARISON91 -> THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
Rule 63    COMPARISON5 -> COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
Rule 64    COMPARISON51 -> VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
Rule 65    COMPARISON52 -> VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
Rule 66    COMPARISON6 -> NO DATA FOR ANY_OF_MEASUREMENT
Rule 67    COMPARISON61 -> NO DATA FOR EVERY_OF_MEASUREMENT
Rule 68    Q_COMPARISON_CONTAINS_QUAL -> QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
Rule 69    Q_COMPARISON_IS_QUAL -> QUALIFIER_FOR_MEASUREMENT_IS QUAL
Rule 70    Q_COMPARISON_IS_EMPTY -> QUALIFIER_FOR_MEASUREMENT_IS EMPTY
Rule 71    VALUE_FOR_EVERY_OF_MEASUREMENT -> VALUE FOR EVERY_OF_MEASUREMENT IS
Rule 72    VALUE_FOR_ANY_OF_MEASUREMENT -> VALUE FOR ANY_OF_MEASUREMENT IS
Rule 73    QUALIFIER_FOR_MEASUREMENT_IS -> QUALIFIER FOR MEASUREMENT IS
Rule 74    QUALIFIER_FOR_MEASUREMENT_CONTAINS -> QUALIFIER FOR MEASUREMENT CONTAINS
Rule 75    MEASUREMENT2 -> VALUE FOR MEASUREMENT IS
Rule 76    ANY_OF_MEASUREMENT -> ANY OF MEASUREMENT
Rule 77    EVERY_OF_MEASUREMENT -> EVERY OF MEASUREMENT
Rule 78    MEASUREMENT -> ID TEST
Rule 79    MEASUREMENT -> ID CRITICAL_BREAKDOWN
Rule 80    IF2 -> OTHERWISE IF
Rule 81    QUAL -> AR
Rule 82    QUAL -> BR
Rule 83    QUAL -> CL
Rule 84    QUAL -> BL
Rule 85    QUAL -> GI

Terminals, with rules where they appear

AND                  : 28 30 61 62
ANY                  : 76
AR                   : 81
AT                   : 63 64 65
BETWEEN              : 61 62
BL                   : 84
BR                   : 82
CL                   : 83
COMMA                : 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
COMP                 : 34 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57 58 59 60
COMPONENT            : 63
CONTAINS             : 74
CRITICAL_BREAKDOWN   : 79
DATA                 : 32 33 66 67
DIFFERENCE           : 61 62
EACH                 : 
EMPTY                : 70
EVERY                : 77
FOLD                 : 61 62
FOR                  : 32 33 64 64 65 65 66 67 71 72 73 74 75
GI                   : 85
ID                   : 78 79
IF                   : 5 80
IN                   : 61 61 62 62 63
IS                   : 32 61 62 63 64 65 71 72 73 75
LEAST                : 63 64 65
LESS                 : 61 63 64
LPAREN               : 30 31
MATH_OPER            : 
MORE                 : 62 65
NO                   : 33 66 67
NUM                  : 36 39 42 43 44 45 45 48 49 50 51 51 54 57 60 61 62
NUMNM                : 35 38 40 41 41 42 44 46 47 47 48 50 53 55 59
NUMUM                : 34 37 37 38 39 40 43 46 49 52 52 53 54 56 58
NUM_FOLD             : 63 64 65
OF                   : 76 77
OR                   : 29 31
OTHERWISE            : 3 4 80
POWERFUL             : 63 64 65
PRINT_VAL            : 2 4
QUALIFIER            : 73 74
RPAREN               : 30 31
TEST                 : 78
THAN                 : 61 62 64 65
THE                  : 63
THEN                 : 2
THERE                : 32 61 62
VALUE                : 61 61 62 62 64 64 65 65 71 72 75
error                : 

Nonterminals, with rules where they appear

ANY_OF_MEASUREMENT   : 66 72
COMPARISON           : 3 5 6 28 28 29 29 30 30 31 31
COMPARISON1          : 7
COMPARISON2          : 8
COMPARISON301        : 9
COMPARISON302        : 10
COMPARISON311        : 11
COMPARISON312        : 12
COMPARISON4          : 13
COMPARISON41         : 14
COMPARISON5          : 15
COMPARISON51         : 16
COMPARISON52         : 17
COMPARISON6          : 18
COMPARISON61         : 19
COMPARISON7          : 20
COMPARISON711        : 21
COMPARISON8          : 22
COMPARISON9          : 23
COMPARISON91         : 24
COMPLETE_IF_THEN     : 0
EVERY_OF_MEASUREMENT : 67 71
IF2                  : 6
IF_COMPARISON        : 1
MEASUREMENT          : 32 33 61 61 62 62 63 64 64 65 65 73 74 75 76 77
MEASUREMENT2         : 34 35 36 37 38 39 40 41 42 43 44 45
QUAL                 : 68 69
QUALIFIER_FOR_MEASUREMENT_CONTAINS : 68
QUALIFIER_FOR_MEASUREMENT_IS : 69 70
Q_COMPARISON_CONTAINS_QUAL : 27
Q_COMPARISON_IS_EMPTY : 26
Q_COMPARISON_IS_QUAL : 25
VALUE_FOR_ANY_OF_MEASUREMENT : 46 47 48 49 50 51 52 53 54 55 56 57
VALUE_FOR_EVERY_OF_MEASUREMENT : 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . COMPLETE_IF_THEN
    (1) COMPLETE_IF_THEN -> . IF_COMPARISON
    (2) COMPLETE_IF_THEN -> . THEN PRINT_VAL
    (3) COMPLETE_IF_THEN -> . OTHERWISE COMPARISON
    (4) COMPLETE_IF_THEN -> . OTHERWISE PRINT_VAL
    (5) IF_COMPARISON -> . IF COMPARISON
    (6) IF_COMPARISON -> . IF2 COMPARISON
    (80) IF2 -> . OTHERWISE IF

    THEN            shift and go to state 3
    OTHERWISE       shift and go to state 4
    IF              shift and go to state 5

    COMPLETE_IF_THEN               shift and go to state 1
    IF_COMPARISON                  shift and go to state 2
    IF2                            shift and go to state 6

state 1

    (0) S' -> COMPLETE_IF_THEN .



state 2

    (1) COMPLETE_IF_THEN -> IF_COMPARISON .

    $end            reduce using rule 1 (COMPLETE_IF_THEN -> IF_COMPARISON .)


state 3

    (2) COMPLETE_IF_THEN -> THEN . PRINT_VAL

    PRINT_VAL       shift and go to state 7


state 4

    (3) COMPLETE_IF_THEN -> OTHERWISE . COMPARISON
    (4) COMPLETE_IF_THEN -> OTHERWISE . PRINT_VAL
    (80) IF2 -> OTHERWISE . IF
    (7) COMPARISON -> . COMPARISON1
    (8) COMPARISON -> . COMPARISON2
    (9) COMPARISON -> . COMPARISON301
    (10) COMPARISON -> . COMPARISON302
    (11) COMPARISON -> . COMPARISON311
    (12) COMPARISON -> . COMPARISON312
    (13) COMPARISON -> . COMPARISON4
    (14) COMPARISON -> . COMPARISON41
    (15) COMPARISON -> . COMPARISON5
    (16) COMPARISON -> . COMPARISON51
    (17) COMPARISON -> . COMPARISON52
    (18) COMPARISON -> . COMPARISON6
    (19) COMPARISON -> . COMPARISON61
    (20) COMPARISON -> . COMPARISON7
    (21) COMPARISON -> . COMPARISON711
    (22) COMPARISON -> . COMPARISON8
    (23) COMPARISON -> . COMPARISON9
    (24) COMPARISON -> . COMPARISON91
    (25) COMPARISON -> . Q_COMPARISON_IS_QUAL
    (26) COMPARISON -> . Q_COMPARISON_IS_EMPTY
    (27) COMPARISON -> . Q_COMPARISON_CONTAINS_QUAL
    (32) COMPARISON1 -> . THERE IS DATA FOR MEASUREMENT
    (33) COMPARISON2 -> . NO DATA FOR MEASUREMENT
    (28) COMPARISON301 -> . COMPARISON AND COMPARISON
    (29) COMPARISON302 -> . COMPARISON OR COMPARISON
    (30) COMPARISON311 -> . LPAREN COMPARISON AND COMPARISON RPAREN
    (31) COMPARISON312 -> . LPAREN COMPARISON OR COMPARISON RPAREN
    (34) COMPARISON4 -> . MEASUREMENT2 COMP NUMUM
    (35) COMPARISON4 -> . MEASUREMENT2 COMP NUMNM
    (36) COMPARISON4 -> . MEASUREMENT2 COMP NUM
    (37) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
    (38) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
    (39) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMUM
    (40) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
    (41) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
    (42) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMNM
    (43) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUM
    (44) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUM
    (45) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUM
    (63) COMPARISON5 -> . COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
    (64) COMPARISON51 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
    (65) COMPARISON52 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
    (66) COMPARISON6 -> . NO DATA FOR ANY_OF_MEASUREMENT
    (67) COMPARISON61 -> . NO DATA FOR EVERY_OF_MEASUREMENT
    (55) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM
    (56) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM
    (57) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM
    (46) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
    (47) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
    (48) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
    (49) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
    (50) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
    (51) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
    (52) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
    (53) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
    (54) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
    (58) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
    (59) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
    (60) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUM
    (61) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (62) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (69) Q_COMPARISON_IS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_IS QUAL
    (70) Q_COMPARISON_IS_EMPTY -> . QUALIFIER_FOR_MEASUREMENT_IS EMPTY
    (68) Q_COMPARISON_CONTAINS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
    (75) MEASUREMENT2 -> . VALUE FOR MEASUREMENT IS
    (72) VALUE_FOR_ANY_OF_MEASUREMENT -> . VALUE FOR ANY_OF_MEASUREMENT IS
    (71) VALUE_FOR_EVERY_OF_MEASUREMENT -> . VALUE FOR EVERY_OF_MEASUREMENT IS
    (73) QUALIFIER_FOR_MEASUREMENT_IS -> . QUALIFIER FOR MEASUREMENT IS
    (74) QUALIFIER_FOR_MEASUREMENT_CONTAINS -> . QUALIFIER FOR MEASUREMENT CONTAINS

    PRINT_VAL       shift and go to state 9
    IF              shift and go to state 10
    THERE           shift and go to state 32
    NO              shift and go to state 33
    LPAREN          shift and go to state 34
    COMPONENT       shift and go to state 36
    VALUE           shift and go to state 37
    QUALIFIER       shift and go to state 42

    COMPARISON                     shift and go to state 8
    COMPARISON1                    shift and go to state 11
    COMPARISON2                    shift and go to state 12
    COMPARISON301                  shift and go to state 13
    COMPARISON302                  shift and go to state 14
    COMPARISON311                  shift and go to state 15
    COMPARISON312                  shift and go to state 16
    COMPARISON4                    shift and go to state 17
    COMPARISON41                   shift and go to state 18
    COMPARISON5                    shift and go to state 19
    COMPARISON51                   shift and go to state 20
    COMPARISON52                   shift and go to state 21
    COMPARISON6                    shift and go to state 22
    COMPARISON61                   shift and go to state 23
    COMPARISON7                    shift and go to state 24
    COMPARISON711                  shift and go to state 25
    COMPARISON8                    shift and go to state 26
    COMPARISON9                    shift and go to state 27
    COMPARISON91                   shift and go to state 28
    Q_COMPARISON_IS_QUAL           shift and go to state 29
    Q_COMPARISON_IS_EMPTY          shift and go to state 30
    Q_COMPARISON_CONTAINS_QUAL     shift and go to state 31
    MEASUREMENT2                   shift and go to state 35
    VALUE_FOR_ANY_OF_MEASUREMENT   shift and go to state 38
    VALUE_FOR_EVERY_OF_MEASUREMENT shift and go to state 39
    QUALIFIER_FOR_MEASUREMENT_IS   shift and go to state 40
    QUALIFIER_FOR_MEASUREMENT_CONTAINS shift and go to state 41

state 5

    (5) IF_COMPARISON -> IF . COMPARISON
    (7) COMPARISON -> . COMPARISON1
    (8) COMPARISON -> . COMPARISON2
    (9) COMPARISON -> . COMPARISON301
    (10) COMPARISON -> . COMPARISON302
    (11) COMPARISON -> . COMPARISON311
    (12) COMPARISON -> . COMPARISON312
    (13) COMPARISON -> . COMPARISON4
    (14) COMPARISON -> . COMPARISON41
    (15) COMPARISON -> . COMPARISON5
    (16) COMPARISON -> . COMPARISON51
    (17) COMPARISON -> . COMPARISON52
    (18) COMPARISON -> . COMPARISON6
    (19) COMPARISON -> . COMPARISON61
    (20) COMPARISON -> . COMPARISON7
    (21) COMPARISON -> . COMPARISON711
    (22) COMPARISON -> . COMPARISON8
    (23) COMPARISON -> . COMPARISON9
    (24) COMPARISON -> . COMPARISON91
    (25) COMPARISON -> . Q_COMPARISON_IS_QUAL
    (26) COMPARISON -> . Q_COMPARISON_IS_EMPTY
    (27) COMPARISON -> . Q_COMPARISON_CONTAINS_QUAL
    (32) COMPARISON1 -> . THERE IS DATA FOR MEASUREMENT
    (33) COMPARISON2 -> . NO DATA FOR MEASUREMENT
    (28) COMPARISON301 -> . COMPARISON AND COMPARISON
    (29) COMPARISON302 -> . COMPARISON OR COMPARISON
    (30) COMPARISON311 -> . LPAREN COMPARISON AND COMPARISON RPAREN
    (31) COMPARISON312 -> . LPAREN COMPARISON OR COMPARISON RPAREN
    (34) COMPARISON4 -> . MEASUREMENT2 COMP NUMUM
    (35) COMPARISON4 -> . MEASUREMENT2 COMP NUMNM
    (36) COMPARISON4 -> . MEASUREMENT2 COMP NUM
    (37) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
    (38) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
    (39) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMUM
    (40) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
    (41) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
    (42) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMNM
    (43) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUM
    (44) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUM
    (45) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUM
    (63) COMPARISON5 -> . COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
    (64) COMPARISON51 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
    (65) COMPARISON52 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
    (66) COMPARISON6 -> . NO DATA FOR ANY_OF_MEASUREMENT
    (67) COMPARISON61 -> . NO DATA FOR EVERY_OF_MEASUREMENT
    (55) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM
    (56) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM
    (57) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM
    (46) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
    (47) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
    (48) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
    (49) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
    (50) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
    (51) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
    (52) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
    (53) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
    (54) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
    (58) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
    (59) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
    (60) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUM
    (61) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (62) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (69) Q_COMPARISON_IS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_IS QUAL
    (70) Q_COMPARISON_IS_EMPTY -> . QUALIFIER_FOR_MEASUREMENT_IS EMPTY
    (68) Q_COMPARISON_CONTAINS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
    (75) MEASUREMENT2 -> . VALUE FOR MEASUREMENT IS
    (72) VALUE_FOR_ANY_OF_MEASUREMENT -> . VALUE FOR ANY_OF_MEASUREMENT IS
    (71) VALUE_FOR_EVERY_OF_MEASUREMENT -> . VALUE FOR EVERY_OF_MEASUREMENT IS
    (73) QUALIFIER_FOR_MEASUREMENT_IS -> . QUALIFIER FOR MEASUREMENT IS
    (74) QUALIFIER_FOR_MEASUREMENT_CONTAINS -> . QUALIFIER FOR MEASUREMENT CONTAINS

    THERE           shift and go to state 32
    NO              shift and go to state 33
    LPAREN          shift and go to state 34
    COMPONENT       shift and go to state 36
    VALUE           shift and go to state 37
    QUALIFIER       shift and go to state 42

    COMPARISON                     shift and go to state 43
    COMPARISON1                    shift and go to state 11
    COMPARISON2                    shift and go to state 12
    COMPARISON301                  shift and go to state 13
    COMPARISON302                  shift and go to state 14
    COMPARISON311                  shift and go to state 15
    COMPARISON312                  shift and go to state 16
    COMPARISON4                    shift and go to state 17
    COMPARISON41                   shift and go to state 18
    COMPARISON5                    shift and go to state 19
    COMPARISON51                   shift and go to state 20
    COMPARISON52                   shift and go to state 21
    COMPARISON6                    shift and go to state 22
    COMPARISON61                   shift and go to state 23
    COMPARISON7                    shift and go to state 24
    COMPARISON711                  shift and go to state 25
    COMPARISON8                    shift and go to state 26
    COMPARISON9                    shift and go to state 27
    COMPARISON91                   shift and go to state 28
    Q_COMPARISON_IS_QUAL           shift and go to state 29
    Q_COMPARISON_IS_EMPTY          shift and go to state 30
    Q_COMPARISON_CONTAINS_QUAL     shift and go to state 31
    MEASUREMENT2                   shift and go to state 35
    VALUE_FOR_ANY_OF_MEASUREMENT   shift and go to state 38
    VALUE_FOR_EVERY_OF_MEASUREMENT shift and go to state 39
    QUALIFIER_FOR_MEASUREMENT_IS   shift and go to state 40
    QUALIFIER_FOR_MEASUREMENT_CONTAINS shift and go to state 41

state 6
